force-app/main/default/objects/Account/fields/AM_Customer_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer_Aadhar_Number__c</fullName>
    <label>AM Customer Aadhar Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>