force-app/main/default/objects/Account/fields/AM_Customer_Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer_Pan_Number__c</fullName>
    <label>AM Customer Pan Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>