force-app/main/default/objects/Account/fields/Direct_Customer__c.field-meta.xml
<CustomField>
    <fullName>Direct_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Customer</label>
    <type>Checkbox</type>
</CustomField>