force-app/main/default/objects/Account/recordTypes/Customer_Buyer.recordType-meta.xml
<RecordType>
    <fullName>Customer_Buyer</fullName>
    <active>false</active>
    <label>Customer Buyer</label>
</RecordType>