force-app/main/default/objects/Account/recordTypes/Customer_Seller.recordType-meta.xml
<RecordType>
    <fullName>Customer_Seller</fullName>
    <active>false</active>
    <label>Customer Seller</label>
</RecordType>