force-app/main/default/objects/Account/recordTypes/Dealer_Seller.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Seller</fullName>
    <active>true</active>
    <label>Dealer Seller</label>
</RecordType>